# tayend

./: .gitignore  README.md  bodyquery.py  dbconnection.py  main.py  portiautil.py  pyproject.toml  requirements.txt
.portia/cache/agent_memory/prun-3bbb461d-798c-4c87-a2fd-2f12d234f0e5/: $important_emails.json
.portia/cache/agent_memory/prun-81715d34-8c21-4fa0-9651-b83c2480209c/: $todays_emails.json
